objects/Apttus_DocuApi__DocuSignDefaultRecipient__c.object
<CustomObject>
    <description>Deprecated.</description>
    <fields>
        <fullName>Apttus_CMDSign__Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the agreement associated with the recipient</description>
        <inlineHelpText>ID of the agreement associated with the recipient</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipName>DocuSignDefaultRecipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact as look-up</description>
        <inlineHelpText>Contact as look-up</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>DocuSignDefaultRecipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__Email__c</fullName>
        <description>Email</description>
        <inlineHelpText>Email</inlineHelpText>
        <label>Recipient Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__FirstName__c</fullName>
        <description>fist name</description>
        <inlineHelpText>fist name</inlineHelpText>
        <label>Recipient First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__LastName__c</fullName>
        <description>Last Name</description>
        <inlineHelpText>Last Name</inlineHelpText>
        <label>Recipient Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__ReadOnlyEmail__c</fullName>
        <formula>IF( (ISBLANK(Apttus_DocuApi__Contact__c ))  , 
    IF( (ISBLANK( Apttus_DocuApi__User__c  )) ,   Apttus_DocuApi__Email__c 
        , Apttus_DocuApi__User__r.Email   
         
    ),  
     Apttus_DocuApi__Contact__r.Email 
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__ReadOnlyFirstName__c</fullName>
        <formula>IF( (ISBLANK(Apttus_DocuApi__Contact__c ))  , 
    IF( (ISBLANK( Apttus_DocuApi__User__c  )) ,     Apttus_DocuApi__FirstName__c  
        ,  Apttus_DocuApi__User__r.FirstName    
         
    ),  
      Apttus_DocuApi__Contact__r.FirstName  
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__ReadOnlyLastName__c</fullName>
        <formula>IF( (ISBLANK(Apttus_DocuApi__Contact__c ))  , 
    IF( (ISBLANK( Apttus_DocuApi__User__c  )) ,     Apttus_DocuApi__LastName__c  
        ,   Apttus_DocuApi__User__r.LastName     
         
    ),  
     Apttus_DocuApi__Contact__r.LastName 
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__RecipientType__c</fullName>
        <description>Recipient Type list will come from UI</description>
        <inlineHelpText>Recipient Type list will come from UI</inlineHelpText>
        <label>Recipient Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signer</fullName>
                    <default>true</default>
                    <label>Signer</label>
                </value>
                <value>
                    <fullName>Carbon Copy</fullName>
                </value>
                <value>
                    <fullName>In Person Signer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__SigningOrder__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Signing Order default</description>
        <inlineHelpText>Signing Order default</inlineHelpText>
        <label>Signing Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User look-up</description>
        <inlineHelpText>User look-up</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DocuSignDefaultRecipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DocuSign Default Recipient (Deprecated)</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Default Recipients (Deprecated)</pluralLabel>
    <recordTypes>
        <fullName>Apttus_DocuApi__Contact</fullName>
        <active>true</active>
        <description>Contact  lookup</description>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Apttus_DocuApi__Email</fullName>
        <active>true</active>
        <description>Manually entered recipient info</description>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Apttus_DocuApi__User</fullName>
        <active>true</active>
        <description>User lookup</description>
        <label>User</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>